content head and body

--- a/02/index.html
+++ b/02/index.html
@@ -1,14 +1,20 @@
 <!-- El doctype le indica el tipo de documento al navegador -->
 <!DOCTYPE html>
 <!-- es la raiz de todo el docmuento -->
-<html>
+<html lang="es">
     <!-- Es informacion necesaria para el navegador pero no se vizsualiza en
     la pagina web -->
     <head>
+        <meta charset="utf8">
+        <meta name="description" content="Esta es mi primera pagina web">
+        <link rel="icon" href="descarga.jpg" >
+        <link rel="stylesheet" href="style.css">
+        <title>Mi primer pagina web|aa</title>
 
     </head>
     <!-- Se agrega toda la informacion que si se ve en la pagina web -->
     <body>
-        
+        <h1>Hola niños</h1>
+        <script src="script.js"></script>
     </body>
 </html>
