--- a/02/index.html
+++ b/02/index.html
@@ -14,7 +14,12 @@
     </head>
     <!-- Se agrega toda la informacion que si se ve en la pagina web -->
     <body>
-        <h1>Hola niños</h1>
+        <h1>Titulo de 1er Nivel</h1>
+        <h2>Titulo de 2do nivel</h2>
+        <h3>Titulo de 3er Nivel</h3>
+        <h4>Titulo de 4to Nivel</h4>
+        <h5>Titulo de 5to nivel</h5>
+        <h6>Titulo de 6to Nivel(ultimo)</h6>
         <script src="script.js"></script>
     </body>
 </html>
