--- a/02/index.html
+++ b/02/index.html
@@ -14,12 +14,28 @@
     </head>
     <!-- Se agrega toda la informacion que si se ve en la pagina web -->
     <body>
-        <h1>Titulo de 1er Nivel</h1>
-        <h2>Titulo de 2do nivel</h2>
-        <h3>Titulo de 3er Nivel</h3>
-        <h4>Titulo de 4to Nivel</h4>
+        <header>
+            fanpage de Anime en Latinoamerica
+        </header>
+        <main>
+        
+        <h1>Anime</h1>
+        <p>El anime es la animacion japonesa, para esto 1ro el mangaka debe escribir el manga</p>
+        <p>Luego un estudi, le da vida al manga, haciendo la adaptacion del manga</p>
+        <h2>Tipos de Anime</h2>
+        <h3>Shonen</h3>
+        <h3>Shoujo</h3>
+        <h3>Mecha</h3>
+        <h3>Isekai</h3>
+        <h3>echhi</h3>
+        
+        <!-- <h4>Titulo de 4to Nivel</h4>
         <h5>Titulo de 5to nivel</h5>
-        <h6>Titulo de 6to Nivel(ultimo)</h6>
+        <h6>Titulo de 6to Nivel(ultimo)</h6> -->
+        </main>
+        <footer>
+            Curso de Html desde 0
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
