elementos de linea 1

--- a/03/index.html
+++ b/03/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        span {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <!--Elemento de Bloque
@@ -40,6 +45,17 @@
         coronel Aureliando Buendia habria de recordar aquella tarde
         remota que su padre lo llevo a conocer el hielo
     </blockquote>
+
+    <!-- Elementos de linea
+    em - emfasis 
+    strong - texto mas importante
+    small - texo menos importante
+    wbr  - word breaking rule
+    br  - breaking rule
+    span - para dividir en una linea-->
+    <p>El <small> libro </small> <em> Cien años de soledad </em> de <strong> Gabriel Garcia Marquez</strong> es un <span>clasico</span> literario</p>
+
+    <p>Estaesunapalabramuaaaaaaaaaaaaaa<br>aaayamegaarcgi<wbr>superextralargaquevamosaromperconwbr</p>
 
 </body>
 </html>
