elementos de linea 2

--- a/03/index.html
+++ b/03/index.html
@@ -57,5 +57,16 @@
 
     <p>Estaesunapalabramuaaaaaaaaaaaaaa<br>aaayamegaarcgi<wbr>superextralargaquevamosaromperconwbr</p>
 
+    <!-- Elementos de linea parte 2 
+    b,u,i(bold,underline,italic) 
+    cite - cita en linea
+    sub y sup - subindice y superindice
+    code - codigo
+    time - tiempo-->
+    <hr>
+    <p>Html aun usa etiquetas para <b>negrita</b> , <u>subrayado</u> y <i>cursiva</i></p>
+    <p>H<sub>2</sub>O   <sup>1</sup> </p>
+
+
 </body>
 </html>
