rutas abs y relativas

--- a/04/index.html
+++ b/04/index.html
@@ -32,5 +32,34 @@
     <p>
         <a href="https://ed.team" target="_blank">Ir a EDteam en una nueva pesaña</a>
     </p>
+
+    <p> <a href="descarga.jpg" download="">Eren</a></p>
+
+    <!-- 1.Rutas Absolutas 
+    *Tiene protocolo(http o https) y son unicas
+
+        2.Rutas relativas
+    *Se usan para rutas inernas del proyecto
+    *No usan protocolo
+    *Se deben navegar hacia el destino
+        -Si el recurso esta en la misma carpeta 
+        se escribe su nombre y extension
+        descarga.jpg
+        -Si el recurso esta en una carpea por encima
+        se escribe ../descarga.jps
+        3. rutas relativas a la raiz
+
+        *se contruyen en base a la araiz del proyectp
+
+
+-->
+    <p><a href="img/snk/descarga.jpg">Eren</a></p>
+
+    <p><a href="/html/imagenes.html">ir  a imagenes</a></p>
+
+    <p><a href="/img/snk/descarga.jpg">mono</a></p>
+    
+
+
 </body>
 </html>
