--- a/04/index.html
+++ b/04/index.html
@@ -59,6 +59,9 @@
 
     <p><a href="/img/snk/descarga.jpg">mono</a></p>
     
+    <p><a href="/html/marcadores.html">Ir a marcadaores</a></p>
+
+    <p><a href="/html/listas.html">Ir a las listas</a></p>
 
 
 </body>
