--- a/05/index.html
+++ b/05/index.html
@@ -14,7 +14,19 @@
     .jpg o .jpeg
     
     -->
-    <img src="img/portafolio.svg" alt="" width="300">
-    <img src="img/eren.jpg" alt="" width="300">
+    <h2>Portafolio</h2>
+    <img src="img/portafolio.svg" alt="est es un portalio en svg" width="300">
+    <h2>Eren</h2>
+    <img src="img/eren.jpg" alt="esta es la imagen de eren de snk" width="300">
+
+    <!-- devicePixelRatio -->
+
+    <!-- PV    Pixeles de la pantalla del dispositivos
+
+    PR    Pixeles reales dados por el fabricamte
+
+    devicePixelRatio = PR/PV -->
+
+    
 </body>
 </html>
