--- a/05/index.html
+++ b/05/index.html
@@ -36,11 +36,26 @@
     <img srcset="img/eren.jpg 2x, img/moto.png 4x"
         src="img/portafolio.svg"    
     > -->
-<picture>
+<!-- <picture>
     <source srcset="img/moto.png" media="(min-width: 800px")>
     <source srcset="img/eren.jpg" media="(min-width: 400px")>
     <img src="img/portafolio.svg" alt="">
-</picture>
+</picture> -->
+    figure 
+    Sirver para cortar el contedio principal con otro
+    ejemplo:
+
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Volup
+    tate rem sit saepe ad omnis quae consequuntur alias iste exped
+    ita similique quod 
+    non perferendis excepturi minima harum earum, qua
+    erat debitis assumenda!
+
+    <figure>ACA VA LO QUE CORTa</figure>
+
+    y aqui sigeu lo normal
+
+
 
 </body>
 </html>
