--- a/05/index.html
+++ b/05/index.html
@@ -41,7 +41,7 @@
     <source srcset="img/eren.jpg" media="(min-width: 400px")>
     <img src="img/portafolio.svg" alt="">
 </picture> -->
-    figure 
+    <!-- figure 
     Sirver para cortar el contedio principal con otro
     ejemplo:
 
@@ -53,8 +53,21 @@
 
     <figure>ACA VA LO QUE CORTa</figure>
 
-    y aqui sigeu lo normal
+    y aqui sigeu lo normal -->
 
+    <!-- video y audio
+    mp4 y mp3 y h264 -->
+
+    <video 
+        src="img/02-CUANDO SEIYA VISTE LA ARMADURA DE PEGASO.mp4" 
+        width="300"
+        controls
+        poster="img/moto.png"
+        autoplay
+    >
+    </video>
+
+    <audio src="audio/panda.mp3" controls autoplay ></audio>
 
 
 </body>
