--- a/07/index.html
+++ b/07/index.html
@@ -33,7 +33,8 @@
 <body>
     <form action="form.html">
         <div>
-            <input placeholder="Tu nombre" name="username">
+            <label for="username">Cual es tu nombre? </label>
+            <input id="username" placeholder="Tu nombre" name="username">
         </div>
         <div>
             <input placeholder="Tu correo" name="email">
