--- a/07/index.html
+++ b/07/index.html
@@ -43,7 +43,7 @@
             <textarea id="" cols="50" rows="20" placeholder="Dejanos un mensaje" name="message"></textarea>
         </div>
         <!-- <button>Enviar</button> -->
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Enviar a revisar">
     </form>
 
 </body>
