--- a/07/index.html
+++ b/07/index.html
@@ -18,12 +18,15 @@
     form -- con esto se inicia el formualrio
     input -- son las etiquetas para poder  ingresar datos
     button -- es para poder enviar esos datos
+    label  -- para poder relacionar con los inputs
 
     atributos
     action -- a donde enviara los datos
     placeholder -- es un texto de ayuda en los inputs
     textarea -- para poder escribir mas texto
     name en cada elemento es muy IMPORTANTE!!!!
+    for - se realcioa con el id del input
+    value  -- es el valor del input
 
     tipos de input
     submit para enviar datos como button
@@ -32,16 +35,28 @@
 
 <body>
     <form action="form.html">
-        <div>
-            <label for="username">Cual es tu nombre? </label>
-            <input id="username" placeholder="Tu nombre" name="username">
-        </div>
-        <div>
-            <input placeholder="Tu correo" name="email">
-        </div>
-        <div>
-            <textarea id="" cols="50" rows="20" placeholder="Dejanos un mensaje" name="message"></textarea>
-        </div>
+        <fieldset>
+            <legend>Datos Personales</legend>
+            <div>
+                <label >Cual es tu nombre?
+                    <input id="username"  name="username">
+                </label>
+            </div>
+            <div>
+                <label for="email">Tu correo</label>
+                <input id="label"  name="email">
+            </div>
+
+        </fieldset>
+        
+        <fieldset>
+            <legend>Mensaje</legend>
+            <div>
+                <label for="message"> Dejanos tu menssaje</label><br>
+                <textarea id="message" cols="50" rows="20"  name="message"></textarea>
+            </div>
+        </fieldset>
+        
         <!-- <button>Enviar</button> -->
         <input type="submit" value="Enviar a revisar">
     </form>
