--- a/07/index.html
+++ b/07/index.html
@@ -56,6 +56,57 @@
                 <textarea id="message" cols="50" rows="20"  name="message"></textarea>
             </div>
         </fieldset>
+
+        <fieldset>
+            <legend>Tipus de Input</legend>
+            <div>
+                <label>
+                    <input type="text">
+                </label>
+            </div>
+
+            <div>
+                <label>Number
+                    <input type="number">
+                </label>
+            </div>
+
+            <div>
+                <label>Date
+                    <input type="date">
+                </label>
+            </div>
+
+            <div>
+                <label>Email
+                    <input type="email">
+                </label>
+            </div>
+
+            <div>
+                <label>Telefono
+                    <input type="tel">
+                </label>
+            </div>
+
+            <div>
+                <label>Color
+                    <input type="color">
+                </label>
+            </div>
+
+            <div>
+                <label>Contraseña
+                    <input type="password">
+                </label>
+            </div>
+
+            <div>
+                <label>Rango
+                    <input type="range" min="5" max="100" step="3">
+                </label>
+            </div>
+        </fieldset>
         
         <!-- <button>Enviar</button> -->
         <input type="submit" value="Enviar a revisar">
